# Private_focuss_writer

./: .gitignore  AUTONOMOUS_EXECUTION_REPORT.md  BUILD_WINDOWS.md  CMakeLists.txt  COMPLETE_ANALYSIS.md  README.md  README_ANDROID.md  README_LINUX.md  ROADMAP.md  TESTING.md  VALIDATION_COMPLETE.md  WINDOWS_SOKOL_INTEGRATION.md  build_linux.sh  build_windows.bat  compile_full_simulation.sh  compile_shaders_linux.sh  compile_shaders_windows.bat  compile_tests_minimal.sh  copy_assets_linux.sh  copy_assets_windows.bat  run_autonomous_tests.sh  run_complete_validation.sh
android/: CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/phantom/writer/: MainActivity.kt
android/app/src/main/res/values/: strings.xml
include/phantom_writer/: types.h  version.h
shaders/: compile_shaders.sh  text.frag  text.vert
src/: main.cpp
src/core/: CMakeLists.txt  buffer.cpp  buffer.h  cursor.cpp  cursor.h  editor_state.cpp  editor_state.h
src/persistence/: CMakeLists.txt  autosave.cpp  autosave.h  swap_file.cpp  swap_file.h
src/platform/: platform_interface.h
src/platform/android/: CMakeLists.txt  android_main.cpp  file_system_android.cpp  file_system_android.h  input_android.cpp  input_android.h  platform_android.cpp  window_android.cpp  window_android.h
src/platform/linux/: CMakeLists.txt  file_system_linux.cpp  file_system_linux.h  input_x11.cpp  input_x11.h  platform_linux.cpp  window_x11.cpp  window_x11.h
src/platform/windows/: CMakeLists.txt  file_system_windows.cpp  file_system_windows.h  input_win32.cpp  input_win32.h  platform_windows.cpp  window_sokol_vulkan.cpp  window_sokol_vulkan.h  window_win32.cpp  window_win32.h
src/rendering/core/: CMakeLists.txt  font_loader.cpp  font_loader.h  glyph_fragmenter.cpp  glyph_fragmenter.h  opacity_manager.cpp  opacity_manager.h
src/rendering/vulkan/: CMakeLists.txt  vk_renderer.cpp  vk_renderer.h  vk_text_renderer.cpp  vk_text_renderer.h
src/ui/: CMakeLists.txt  confirmation_dialog.cpp  confirmation_dialog.h  revision_mode.cpp  revision_mode.h
src/utils/: CMakeLists.txt  logger.cpp  logger.h
tests/: CMakeLists.txt  test_autonomous.cpp  test_full_simulation.cpp
